uipath-service/main/default/objects/Living_Summary_History__c/Living_Summary_History__c.object-meta.xml
<CustomObject>
    <label>Living Summary History</label>
    <nameField>
        <label>Living Summary History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Living Summary History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>