uipath-service/main/default/objects/Living_Summary_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Living Summary History</relationshipLabel>
    <relationshipName>Living_Summary_History</relationshipName>
    <type>Lookup</type>
</CustomField>