uipath-service/main/default/objects/Living_Summary_History__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <type>TextArea</type>
</CustomField>